--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -165,6 +165,7 @@ aside {
     flex-direction: column;
     align-items: flex-start;
     margin-left: 4px;
+    width: 100%;
 }
 
 .name-last-access p {
