--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -12,14 +12,14 @@
             <a href="/" id="index-anchor">Início</a>
             <a href="#" id="ask-anchor" th:classappend="${#request.userPrincipal} ? 'show-only-mobile' : ''">Perguntar</a>
             <a sec:authorize="isAnonymous()" href="/user/edit" id="profile-anchor-link">Perfil</a>
-            <div sec:authorize="isAuthenticated()" th:href="'/user/' + ${#authentication.getPrincipal().getId()}" id="profile-anchor">
+            <div sec:authorize="isAuthenticated()" id="profile-anchor">
             <div class="dropdown">
                 <img th:if="${#authentication.getPrincipal().getImage() == null}" src="/img/user.svg" alt="Imagem de perfil"/>
                 <div style="width: 40px; height: 40px" th:if="${#authentication.getPrincipal().getImage() != null}">
                     <img class="avatar" th:src="${#authentication.getPrincipal().getImage()}" alt="Imagem de perfil"/>
                 </div>
                 <div class="dropdown-content">
-                    <a th:href="'/user/edit'">Editar Usuário</a>
+                    <a th:href="'/user/' + ${#authentication.getPrincipal().getId()}">Ver Perfil</a>
                     <a th:href="'/'">Alterar Senha</a>
                 </div>
             </div>
