--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -71,9 +71,10 @@ header nav img{
 
 .dropdown-content a {
     color: black;
-    padding: 12px 16px;
+    padding: 10px 16px;
     text-decoration: none;
     display: block;
+    font-size: small;
 }
 
 .dropdown-content a:hover {background-color: #FFFFFF;}
