feature - 05 | @gabriel.rabelo: Adiciona link para encerrar sessão

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -20,6 +20,7 @@
                 <div class="dropdown-content">
                     <a th:href="'/user/' + ${#authentication.getPrincipal().getId()}">Ver Perfil</a>
                     <a th:href="'/'">Alterar Senha</a>
+                    <a th:href="'/logout'"> Sair </a>
                 </div>
             </div>
             </div>
