feature: @willian @vinicius - iniciliza reimplementação da tela de perfil

--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -12,27 +12,16 @@
 <div class="background" th:if="${user}">
 
     <div class="profile">
-        <div class="profile-info">
-            <div class="image-profile">
+        <div class="row">
+            <div>
                 <img class="profile-picture" th:if="!${user.getImage()}" src="/img/profilePic.svg" alt="Foto do usuário">
                 <img class="profile-picture" th:if="${user.getImage()}" th:src="${user.getImage()}" alt="Foto do usuário">
-
                 <p>Administrador</p>
             </div>
 
-            <div class="info-items">
-                <div class="name-items">
-                    <p class="name">TownSQ</p>
-                    <p class="member-since">Membro desde: </p>
-                    <p class="creation-date">20/09/2020</p>
-                </div>
-
-                <div class="tags-user">
-                    <p>Pontuação: 20 pontos</p>
-                    <p>7 perguntas </p>
-                    <p>13 respostas</p>
-                </div>
-
+            <div class="col justify-center">
+                    <h2 th:text="${user.getName()}"></h2>
+                    <small> <b>Membro desde:&nbsp </b> <span th:text="${#dates.format(user.getCreatedAt(), 'dd/MM/yyyy')}"></span></small>
             </div>
         </div>
 
