--- a/src/main/resources/static/css/user.css
+++ b/src/main/resources/static/css/user.css
@@ -1,6 +1,6 @@
 .profile-picture {
-    width: 180px;
-    height: 180px;
+    width: 9vw;
+    height: 9vw;
     border-radius: 50%;
     object-fit: cover;
 }
@@ -42,14 +42,14 @@
 }
 
 .background {
-    width: 100%;
+    width: 65%;
     height: 100%;
     margin: 0 auto;
     padding-top: 2%;
 }
 
 .line{
-    width: 1100px;
+    width: 100%;
     height: 70px;
     border-bottom: 2px solid #A1A1A1;
     position: relative;
@@ -61,7 +61,7 @@
 }
 
 .bio {
-    width: 1100px;
+    width: 100%;
     margin-top: 20px;
 }
 
