--- a/src/main/resources/static/css/user.css
+++ b/src/main/resources/static/css/user.css
@@ -1,8 +1,48 @@
 .profile-picture {
-    width: 9vw;
-    height: 9vw;
+    width: 100%;
+    height: 100%;
     border-radius: 50%;
     object-fit: cover;
+}
+
+.picture-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.justify-center {
+    margin-left: 1vw;
+    margin-top: 3vw;
+}
+
+.justify-center h2, small{
+    margin-left: 1.5vw;
+}
+
+.picture-info p {
+    margin-top: 30px;
+    background-color: #08AAB5;
+    border-radius: 20px;
+    text-align: center;
+    padding: 10px 40px;
+    color: #FFFFFF;
+}
+
+.items-info {
+    max-width: 500px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 3vw;
+}
+
+.pontuacao {
+    background-color: #339DCB;
+    color: #FFFFFF;
+    border-radius: 20px;
+    text-align: center;
+    padding: 10px 30px;
 }
 
 .align-center p {
@@ -50,7 +90,7 @@
 
 .line{
     width: 100%;
-    height: 70px;
+    height: 20px;
     border-bottom: 2px solid #A1A1A1;
     position: relative;
 }
@@ -68,4 +108,12 @@
 .bio p {
     margin-top: 40px;
     font-size: 17px;
+}
+
+@media (max-width: 1024px) {
+
+}
+
+@media (max-width: 768px) {
+
 }
