--- a/src/main/resources/static/css/user.css
+++ b/src/main/resources/static/css/user.css
@@ -1,6 +1,6 @@
 .profile-picture {
-    width: 100%;
-    height: 100%;
+    width: 180px;
+    height: 180px;
     border-radius: 50%;
     object-fit: cover;
 }
@@ -20,13 +20,16 @@
     margin-left: 1.5vw;
 }
 
-.picture-info p {
+.tag-user {
     margin-top: 30px;
     background-color: #08AAB5;
     border-radius: 20px;
     text-align: center;
     padding: 10px 40px;
     color: #FFFFFF;
+    height: 40px;
+    width: 180px;
+    font-size: 16px;
 }
 
 .items-info {
@@ -43,6 +46,8 @@
     border-radius: 20px;
     text-align: center;
     padding: 10px 30px;
+    font-size: 16px;
+    height: 40px;
 }
 
 .align-center p {
@@ -110,10 +115,26 @@
     font-size: 17px;
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 630px) {
+    .row {
+        flex-direction: column;
+    }
 
-}
+    .profile-picture {
+        width: 120px;
+        height: 120px;
+    }
 
-@media (max-width: 768px) {
+    .col {
+        align-items: center;
+    }
+
+    .justify-center {
+        align-items: center;
+    }
+
+    .pontuacao {
+        font-size: 14px;
+    }
 
 }
