--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -12,25 +12,24 @@
 <div class="background" th:if="${user}">
 
     <div class="profile">
-        <div class="row">
-            <div class="picture-info">
-                <img class="profile-picture" th:if="!${user.getImage()}" src="/img/profilePic.svg" alt="Foto do usuário">
-                <img class="profile-picture" th:if="${user.getImage()}" th:src="${user.getImage()}" alt="Foto do usuário">
-                <p>Administrador</p>
-            </div>
+        <div class="col">
+            <div class="row">
+                <div class="picture-info">
+                    <img class="profile-picture" th:if="!${user.getImage()}" src="/img/profilePic.svg" alt="Foto do usuário">
+                    <img class="profile-picture" th:if="${user.getImage()}" th:src="${user.getImage()}" alt="Foto do usuário">
+                </div>
 
-            <div class="col justify-center">
-                    <h2 th:text="${user.getName()}"></h2>
-                    <small> <b>Membro desde:&nbsp </b> <span th:text="${#dates.format(user.getCreatedAt(), 'dd/MM/yyyy')}"></span></small>
+                <div class="col justify-center">
+                        <h2 th:text="${user.getName()}"></h2>
+                        <small> <b>Membro desde:&nbsp </b> <span th:text="${#dates.format(user.getCreatedAt(), 'dd/MM/yyyy')}"></span></small>
 
-                <div class="items-info">
-                    <p class="pontuacao">Pontuação: 20 pontos</p>
-                    <p>7 perguntas</p>
-                    <p>6 respostas</p>
+                    <div class="items-info">
+                        <p class="pontuacao">Pontuação: 20 pontos</p>
+                    </div>
                 </div>
             </div>
+            <p class="tag-user">Administrador</p>
         </div>
-
         <div class="line"></div>
         <div class="bio">
             <h1>Biografia</h1>
