--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -20,22 +20,33 @@
                 </div>
 
                 <div class="col justify-center">
-                        <h2 th:text="${user.getName()}"></h2>
-                        <small> <b>Membro desde:&nbsp </b> <span th:text="${#dates.format(user.getCreatedAt(), 'dd/MM/yyyy')}"></span></small>
+                    <h2 th:text="${user.getName()}"></h2>
+                    <small> <b>Membro desde:&nbsp </b> <span th:text="${#dates.format(user.getCreatedAt(), 'dd/MM/yyyy')}"></span></small>
 
                     <div class="items-info">
                         <p class="pontuacao">Pontuação: 20 pontos</p>
                     </div>
                 </div>
             </div>
-            <p class="tag-user">Administrador</p>
+            <!-- <p class="tag-user">Administrador</p> -->
         </div>
         <div class="line"></div>
-        <div class="bio">
-            <h1>Biografia</h1>
-            <!--        <p th:text="${user.getBio()}"></p>-->
-            <p>Biografia "mokada". A bio do usuário será exibida aqui.</p>
+        <div class="info">
+            <div th:if="${user.getCompany()}" id="company" class="item">
+                <h3>Empresa</h3>
+                <p th:text="${user.getCompany()}"></p>
+            </div>
+            <div th:if="${user.getWebsite()}" id="website" class="item">
+                <h3>Site</h3>
+                <p th:text="${user.getWebsite()}"></p>
+            </div>
+            <div th:if="${user.getBio()}" id="biography" class="item">
+                <h2>Biografia</h2>
+                <p th:text="${user.getBio()}"></p>
+            </div>
+
         </div>
+
         <div th:if="${#authentication.getPrincipal().id == user.getId()}" class="white-background">
             <button onclick="document.querySelector('#link').click()">Editar perfil</button>
             <a id="link" th:href="@{/user/edit}"></a>
