--- a/src/main/resources/static/css/user.css
+++ b/src/main/resources/static/css/user.css
@@ -128,6 +128,10 @@
 }
 
 @media (max-width: 630px) {
+    .background {
+        width: 80%;
+    }
+
     .row {
         flex-direction: column;
     }
