--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -58,7 +58,7 @@
         <div class="status-pill-questions self-end bg-danger">
             <small>Não solucionada</small>
         </div>
-            <div class="add-comment self-end" th:onclick="|toggleModal('question;${question.id}')|">
+            <div class="add-comment self-end" th:onclick="|updateModal('question;${question.id}')|">
                 <img alt="Adicionar Comentário" th:src="@{/img/icons/add_comment.svg}"/>
                 <small>Adicionar um Comentário</small>
             </div>
@@ -156,7 +156,7 @@
         e.preventDefault()
     })
 
-    function toggleModal(referer) {
+    function updateModal(referer) {
 
         const modal = document.querySelector(".modal");
         const header = document.querySelector("header");
@@ -165,14 +165,11 @@
 
         const split = referer.split(';');
 
-        form.action = `/comment/create/${split[0]}/${split[1]}`
-
-
         if(modal.style.opacity === '1') {
             modal.style.opacity = '0'
             modal.style.zIndex = '-99999';
-            mainDiv.style.zIndex = '1';
-            header.style.zIndex = '1';
+            mainDiv.style.zIndex = '';
+            header.style.zIndex = '';
         }
         else
             modal.style.opacity = '1'
@@ -188,10 +185,10 @@
         const mainDiv = document.querySelector("#contentDiv");
 
         modal.style.opacity = '0'
-        modal.style.zIndex = '-1';
+        modal.style.zIndex = '-99999';
         modal.style.pointerEvents = 'none'
-        mainDiv.style.zIndex = '1';
-        header.style.zIndex = '1';
+        mainDiv.style.zIndex = '';
+        header.style.zIndex = '';
     }
 
     function submitCommentForm(){
