--- a/src/main/resources/static/css/userEdit.css
+++ b/src/main/resources/static/css/userEdit.css
@@ -40,6 +40,7 @@
 
 .profile-edit {
     width: 60%;
+    display: flex;
 }
 
 .info-container {
@@ -52,6 +53,25 @@
 
 .bio-item {
     margin-top: 10px;
+}
+
+.newpicture {
+    padding-top: 20px;
+    width: 30%;
+    height: 100%;
+}
+
+.form {
+    width: 70%;
+    height: 100%;
+}
+
+.question-card-divider {
+    margin-right: 16px
+}
+
+.pic-title {
+    display: none;
 }
 
 #example{
@@ -71,6 +91,7 @@
     .profile-edit {
         width: 100%;
         height: 70%;
+        flex-direction: column;
     }
 
     .img-container {
@@ -82,6 +103,25 @@
     .pontuacao {
         padding: 10px 15px;
         font-size: 10pt;
+    }
+
+    .newpicture {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .pic-title {
+        display: block;
+    }
+
+    .edit-title {
+        display: none;
+    }
+
+    .form {
+        width: 100%;
     }
 
     .line {
