--- a/src/main/resources/templates/userEdit.html
+++ b/src/main/resources/templates/userEdit.html
@@ -56,11 +56,37 @@
                 <img class="avatar" th:if="${user.getImage()}" th:src="${user.getImage()}" alt="Foto do usuário">
             </div>
         </div>
-        <div class="form" style="background-color: #2D839E">
+        <div class="form">
             <p class="title edit-title">Editar Perfil</p>
 
             <div class="form-group">
+                <div class="form-control">
+                    <label for="name">Nome</label>
+                    <input type="text" name="name" id="name" th:value="${user.getName()}"/>
+                </div>
+            </div>
 
+            <div class="form-group">
+                <div class="form-control">
+                    <label for="name">Empresa</label>
+                    <input type="text" name="company" th:value="${user.getCompany()}"/>
+                </div>
+
+                <div class="form-control">
+                    <label for="name">Site</label>
+                    <input type="text" name="site" id="site" th:value="${user.getWebsite()}"/>
+                    <label id="example" for="site">Ex.: https://www.seusite.com </label>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <div class="form-control">
+                    <label for="name">Bio</label>
+                    <textarea type="text" name="bio" th:value="${user.getBio()}"></textarea>
+                </div>
+            </div>
+            <div class="row white-background">
+                <button type="submit">Atualizar</button>
             </div>
         </div>
     </div>
