--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -64,7 +64,7 @@
                 <small>Adicionar um Comentário</small>
             </div>
         <div class="comments">
-            <div class="comment-actions" th:each="comment : ${question.getComments()}">
+            <div class="comment-actions" th:each="comment : ${question.getAllActiveComments()}">
                 <div class="comment-card">
                     <div class="comment-left">
                         <small th:text="${comment.getText()}"></small>
@@ -75,7 +75,7 @@
                 </div>
                 <div class="action-icons-comment" sec:authorize="isAuthenticated()" th:if="${#authentication.getPrincipal().id == comment.getUser().getId()}">
                     <a href="#"><img th:src="@{/img/icons/lapis.svg}"/></a>
-                    <a th:href="'/comment/delete/' + ${question.getId()}"><img th:src="@{/img/icons/lixeira.svg}"/></a>
+                    <a th:href="'/comment/delete/' + ${comment.getId()}"><img th:src="@{/img/icons/lixeira.svg}"/></a>
                 </div>
             </div>
         </div>
