--- a/src/main/resources/static/css/admin.css
+++ b/src/main/resources/static/css/admin.css
@@ -4,7 +4,7 @@
     height: calc(100vh - 56px);
 }
 
-.propaganda{
+.form{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -51,6 +51,10 @@
 
 
 }
-.tabs a:visited{
+.tabs a:active{
     color:var(--dark-green);
+}
+
+.current-link {
+    color:#baada7;
 }
