--- a/src/main/resources/templates/adminBanner.html
+++ b/src/main/resources/templates/adminBanner.html
@@ -14,19 +14,24 @@
         <div class="line"></div>
         <div class="tabs">
             <a href="/admin/banner">Editar Propaganda</a>
-            <a href="#">Gerenciar Moderadores</a>
+            <a href="/admin/mods">Gerenciar Moderadores</a>
         </div>
-        <div class="propaganda">
-            <h1 class="title">Atualize a propaganda</h1>
-            <div class="form-control">
-                <label for="name">Titulo do anuncio</label>
-                <input type="text" name="name" id="name"/>
+        <form role="form" th:action="@{/admin/banner}" th:method="post">
+            <div class="form">
+                <h1 class="title">Atualize a propaganda</h1>
+                <div class="form-control">
+                    <label for="name">Titulo do anuncio</label>
+                    <input type="text" name="name" id="name"/>
+                </div>
+                <div class="form-control">
+                    <label for="name">Texto do anuncio</label>
+                    <textarea type="text" name="bio" id="bio"></textarea>
+                </div>
+                <div class="row white-background">
+                    <button type="submit">Atualizar</button>
+                </div>
             </div>
-            <div class="form-control">
-                <label for="name">Texto do anuncio</label>
-                <textarea type="text" name="bio" id="bio"></textarea>
-            </div>
-        </div>
+        </form>
     </div>
 
     <div class="question-card-divider"></div>
