--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -21,12 +21,12 @@
                     <div class="form-control">
                         <input type="hidden" th:value="${question.getId()}" th:name="question" th:id="question" />
                         <label for="text-input">Comentário</label>
-                        <input type="text" name="text" id="text-input"/>
+                        <input type="text" name="text" id="text-input" required/>
                     </div>
                 </div>
             </div>
             <div class="row white-background">
-                <button type="submit" onclick="submitCommentForm()">Cadastrar</button>
+                <button type="submit" onclick="submitCommentForm()">Salvar</button>
             </div>
         </form>
     </div>
@@ -67,15 +67,15 @@
             <div class="comment-actions" th:each="comment : ${question.getAllActiveComments()}">
                 <div class="comment-card">
                     <div class="comment-left">
-                        <small th:text="${comment.getText()}"></small>
+                        <small th:text="${comment.getText()}" th:id="'text-' + ${comment.getId()}"></small>
                     </div>
                     <div class="comment-right">
                         <a th:href="'/user/' + ${comment.getUser().getId()}"><small th:text="${comment.getUser().getName()}"></small></a>
                     </div>
                 </div>
                 <div class="action-icons-comment" sec:authorize="isAuthenticated()" th:if="${#authentication.getPrincipal().id == comment.getUser().getId()}">
-                    <a href="#"><img th:src="@{/img/icons/lapis.svg}"/></a>
-                    <a th:href="'/comment/delete/' + ${comment.getId()}"><img th:src="@{/img/icons/lixeira.svg}"/></a>
+                    <img th:onclick="|updateModal('edit;${comment.getId()}')|" th:src="@{/img/icons/lapis.svg}" alt="Editar comentário"/>
+                    <a th:href="'/comment/delete/' + ${comment.getId()}"><img th:src="@{/img/icons/lixeira.svg}" alt="Excluir comentário"/></a>
                 </div>
             </div>
         </div>
@@ -143,54 +143,6 @@
 </div>
 <div th:replace="fragments/toast.html :: toasts">
 </div>
-<script defer>
-
-    document.querySelector('#comment-form').addEventListener('submit', function (e){
-        e.preventDefault()
-    })
-
-    function updateModal(referer) {
-
-        const modal = document.querySelector(".modal");
-        const header = document.querySelector("header");
-        const mainDiv = document.querySelector("#contentDiv");
-        const form = document.querySelector('#comment-form');
-
-        const split = referer.split(';');
-        form.action = `/comment/create/${split[0]}/${split[1]}`
-
-        if(modal.style.opacity === '1') {
-            modal.style.opacity = '0'
-            modal.style.zIndex = '-99999';
-            mainDiv.style.zIndex = '';
-            header.style.zIndex = '';
-        }
-        else
-            modal.style.opacity = '1'
-            modal.style.zIndex = '99999'
-            modal.style.pointerEvents = 'auto'
-            mainDiv.style.zIndex = '-1';
-            header.style.zIndex = '-1';
-    }
-
-    function closeModal() {
-        const modal = document.querySelector(".modal");
-        const header = document.querySelector("header");
-        const mainDiv = document.querySelector("#contentDiv");
-        const form = document.querySelector('#comment-form');
-
-        form.action = ''
-
-        modal.style.opacity = '0'
-        modal.style.zIndex = '-99999';
-        modal.style.pointerEvents = 'none'
-        mainDiv.style.zIndex = '';
-        header.style.zIndex = '';
-    }
-
-    function submitCommentForm(){
-        document.querySelector('#comment-form').submit()
-    }
-</script>
+<script defer th:src="@{/js/comments.js}"></script>
 </body>
 </html>
